# RosWorks

./: .gitignore  CMakeLists.txt  README.md  package.xml
action/: GoToGoal.action
launch/: run_robot.launch
scripts/: go_to_goal_client.py  go_to_goal_server.py  run_robot.py
src/: __init__.py  avoider.py  motion.py  navigation.py  robot.py  run_robot.py  run_robot_interactive.py  wall_follower.py
